--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@angular/router": "^3.0.0",
     "@ionic-native/camera": "^5.14.0",
     "@ionic-native/core": "~4.20.0",
     "@ionic-native/native-storage": "^5.14.0",
