Git ignore update

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ npm-debug.log*
 /www
 
 src/assets/imgs/
+
+src/Millat Kusina Filipina-20191016T084936Z-001/Millat Kusina Filipina/
+
+src/assets.zip
