Updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ src/assets/imgs/
 src/Millat Kusina Filipina-20191016T084936Z-001/Millat Kusina Filipina/
 
 src/assets.zip
+
+src/Millat Kusina Filipina-20191016T084936Z-001/
