--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@angular/router": "^3.0.0",
+    "@ionic-native/call-number": "^5.16.0",
     "@ionic-native/camera": "^5.14.0",
     "@ionic-native/core": "~4.20.0",
     "@ionic-native/native-storage": "^5.14.0",
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
     "@ionic/storage": "^2.2.0",
+    "call-number": "1.0.1",
     "cordova-android": "7.1.4",
     "cordova-plugin-camera": "4.1.0",
     "cordova-plugin-device": "^2.0.2",
@@ -58,7 +60,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "mx.ferreyra.callnumber": {}
     },
     "platforms": [
       "android"
